# mlp-from-scratch

./: .gitignore  README.md  pyproject.toml
examples/: multiclass_example.py  regression_example.py  xor_example.py
mlp_scratch/: __init__.py  mlp.py
tests/: test_mlp.py
